fix header alignment

--- a/euphrosyne/assets/css/base.css
+++ b/euphrosyne/assets/css/base.css
@@ -188,6 +188,10 @@ ul li {
   justify-content: end;
 }
 
+.fr-header .fr-btns-group {
+  align-items: baseline;
+}
+
 /* purgecss ignore */
 #toolbar input#searchbar {
   height: 1.93rem;
